--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css" />
     <script type="module" src="./main.js"></script>
   </head>
-  <body>
+  <body id="app">
     <div id="root">not render</div>
   </body>
 </html>
